--- a/phpBB/adm/style/admin.css
+++ b/phpBB/adm/style/admin.css
@@ -626,10 +626,27 @@ td.name {
 .col1 { background-color: #DCEBFE; }
 .col2 { background-color: #F9F9F9; }
 
+/* 4 row background colours for trees */
+.row1a { background-color: #F9F9F9; }
+.row1b { background-color: #F6F6F6; }
+.row2a { background-color: #E7EEF4; }
+.row2b { background-color: #E3EBF2; }
+
 .spacer {
 	background-color: #DBDFE2;
 	height: 1px;
 	line-height: 1px;
+}
+
+/* Deactivated row */
+.row-inactive { 
+	color: #999; 
+}
+.row-inactive a, .row-inactive strong { 
+	color: #888;
+}
+.row-inactive a:hover {
+	color: #BC2A4D;
 }
 
 /* General form styles
