[feature/userdelete] Some changes pointed out by nickvergessen
PHPBB3-9621

--- a/phpBB/styles/prosilver/template/ucp_profile_reg_details.html
+++ b/phpBB/styles/prosilver/template/ucp_profile_reg_details.html
@@ -59,7 +59,7 @@
 
 	<fieldset>
 	<dl>
-		<dt><label for="delete_account">{L_DELETE_ACCOUNT}:</label><br /><span>{L_DELETE_ACCOUNT_EXPLAIN}</span></dt><!-- This language variable is dynamically assigned to an existing variable. It doesn't actually exist itself -->
+		<dt><label for="delete_account">{L_DELETE_ACCOUNT}:</label><br /><span>{L_DELETE_ACCOUNT_EXPLAIN}</span></dt>
 		<dd><input type="checkbox" name="delete_account" id="delete_account" title="{L_DELETE_ACCOUNT}" /></dd>
 	</dl>
 	</fieldset>
