--- a/phpBB/styles/prosilver/theme/common.css
+++ b/phpBB/styles/prosilver/theme/common.css
@@ -591,8 +591,7 @@ li.pagination {
 /* jQuery popups
 ---------------------------------------- */
 .phpbb_alert {
-	background-color: #FFFFFF;
-	border: 1px solid #999999;
+	border: 1px solid transparent;
 	position: fixed;
 	display: none;
 	top: 100px;
@@ -603,10 +602,19 @@ li.pagination {
 	padding: 0 25px 20px 25px;
 }
 
-.phpbb_alert img.alert_close {
+.phpbb_alert .alert_close {
+	display: block;
 	float: right;
+	width: 16px;
+	height: 16px;
+	overflow: hidden;
+	text-decoration: none !important;
+	background: transparent none 0 0 no-repeat;
 	margin-top: -7px;
-	margin-right: -30px;
+	margin-right: -31px;
+}
+.phpbb_alert .alert_close:hover {
+	background-position: 0 -16px;
 }
 
 .phpbb_alert p {
@@ -624,7 +632,6 @@ li.pagination {
 	top: 0;
 	width: 100%;
 	height: 100%;
-	background-color: #000000;
 	opacity: 0.5;
 }
 
