[ticket/10270] Changing close button for ajax popups
Changed close button for popups to match prosilver style and from img to css, moved color values to colours.css

PHPBB3-10270

--- a/phpBB/styles/prosilver/theme/colours.css
+++ b/phpBB/styles/prosilver/theme/colours.css
@@ -1076,3 +1076,17 @@ input.search {
 input.disabled {
 	color: #666666;
 }
+
+/* jQuery popups
+---------------------------------------- */
+.phpbb_alert {
+	background-color: #FFFFFF;
+	border-color: #999999;
+}
+.phpbb_alert .alert_close {
+	background-image: url("./images/alert_close.png");
+}
+#darken {
+	background-color: #000000;
+}
+
