[ticket/10510] Fixed a bug where quickmod tools weren't being displayed.
It was referring to some template variables that were removed in a
previous commit. Changed!

PHPBB3-10510

--- a/phpBB/styles/subsilver2/template/viewtopic_body.html
+++ b/phpBB/styles/subsilver2/template/viewtopic_body.html
@@ -348,7 +348,7 @@
 <table width="100%" cellspacing="1">
 <tr>
 	<td width="40%" valign="top" nowrap="nowrap" align="{S_CONTENT_FLOW_BEGIN}">
-	<!-- IF S_TOPIC_MOD_LOCK or S_TOPIC_MOD_DELETE or S_TOPIC_MOD_MOVE or S_TOPIC_MOD_SPLIT or S_TOPIC_MOD_MERGE or S_TOPIC_MOD_MERGE_TOPIC or S_TOPIC_MOD_FORK or S_TOPIC_MOD_MAKE_NORMAL or S_TOPIC_MOD_MAKE_STICKY or S_TOPIC_MOD_MAKE_ANNOUNCE or S_TOPIC_MOD_MAKE_GLOBAL or S_TOPIC_MOD_TOPIC_LOGS -->
+	<!-- IF .quickmod -->
 		<form method="post" action="{S_MOD_ACTION}">
 			<span class="gensmall">{L_QUICK_MOD}:</span>
 			<select name="action" id="quick-mod-select">
