--- a/phpBB/styles/prosilver/template/viewtopic_body.html
+++ b/phpBB/styles/prosilver/template/viewtopic_body.html
@@ -254,7 +254,7 @@
 
 <!-- INCLUDE jumpbox.html -->
 
-<!-- IF S_TOPIC_MOD_LOCK or S_TOPIC_MOD_DELETE or S_TOPIC_MOD_MOVE or S_TOPIC_MOD_SPLIT or S_TOPIC_MOD_MERGE or S_TOPIC_MOD_MERGE_TOPIC or S_TOPIC_MOD_FORK or S_TOPIC_MOD_MAKE_NORMAL or S_TOPIC_MOD_MAKE_STICKY or S_TOPIC_MOD_MAKE_ANNOUNCE or S_TOPIC_MOD_MAKE_GLOBAL or S_TOPIC_MOD_TOPIC_LOGS -->
+<!-- IF .quickmod -->
 	<form method="post" action="{S_MOD_ACTION}">
 	<fieldset class="quickmod">
 		<label for="quick-mod-select">{L_QUICK_MOD}:</label>
