[ticket/9058] Make deleting the poll votes optional when editing the options
PHPBB3-9058

--- a/phpBB/styles/prosilver/template/posting_poll_body.html
+++ b/phpBB/styles/prosilver/template/posting_poll_body.html
@@ -20,6 +20,7 @@
 		<dl>
 			<dt><label for="poll_option_text">{L_POLL_OPTIONS}:</label><br /><span>{L_POLL_OPTIONS_EXPLAIN}</span></dt>
 			<dd><textarea name="poll_option_text" id="poll_option_text" rows="5" cols="35" class="inputbox">{POLL_OPTIONS}</textarea></dd>
+			<dd><label for="poll_reset_votes"><input type="checkbox" id="poll_reset_votes" name="poll_reset_votes" /> {L_POLL_RESET_VOTES}</label></dd>
 		</dl>
 
 		<hr class="dashed" />
