--- a/phpBB/styles/subsilver2/theme/stylesheet.css
+++ b/phpBB/styles/subsilver2/theme/stylesheet.css
@@ -489,6 +489,10 @@ input.radio {
 	background-color: transparent;
 }
 
+input.align-bottom {
+	vertical-align: bottom;
+}
+
 .post {
 	background-color: white;
 	border-style: solid;
