--- a/phpBB/styles/prosilver/template/ucp_prefs_post.html
+++ b/phpBB/styles/prosilver/template/ucp_prefs_post.html
@@ -9,6 +9,13 @@
 	<fieldset>
 	<!-- IF ERROR --><p class="error">{ERROR}</p><!-- ENDIF -->
 	<dl>
+         <dt><label for="selecteditor0">Enable Visual Editor:</label></dt>
+         <dd>
+            <label for="selecteditor1"><input type="radio" name="selecteditor" id="selecteditor1" value="1"<!-- IF  S_VISUAL_EDITOR --> checked="checked"<!-- ENDIF --> /> {L_YES}</label>
+            <label for="selecteditor0"><input type="radio" name="selecteditor" id="selecteditor0" value="0"<!-- IF not S_VISUAL_EDITOR --> checked="checked"<!-- ENDIF --> /> {L_NO}</label>
+         </dd>
+    </dl>
+	<dl>
 		<dt><label for="bbcode1">{L_DEFAULT_BBCODE}:</label></dt>
 		<dd>
 			<label for="bbcode1"><input type="radio" name="bbcode" id="bbcode1" value="1"<!-- IF S_BBCODE --> checked="checked"<!-- ENDIF --> /> {L_YES}</label> 
