--- a/phpBB/styles/subsilver2/template/quickreply_editor.html
+++ b/phpBB/styles/subsilver2/template/quickreply_editor.html
@@ -15,7 +15,7 @@
 		<tr>
 			<td class="cat" colspan="2" align="center">
 				<input class="btnmain" type="submit" accesskey="s" tabindex="6" name="post" value="{L_SUBMIT}" />&nbsp;
-				<input class="btnlite" type="submit" accesskey="f" tabindex="7" name="full_editor" value="{L_FULL_EDITOR}" />
+				<input class="btnlite" type="submit" accesskey="p" tabindex="7" name="preview" value="{L_PREVIEW}" />
 
 				{S_FORM_TOKEN}
 				{QR_HIDDEN_FIELDS}
