--- a/phpBB/styles/subsilver2/template/quickreply_editor.html
+++ b/phpBB/styles/subsilver2/template/quickreply_editor.html
@@ -14,8 +14,8 @@
 		</tr>
 		<tr>
 			<td class="cat" colspan="2" align="center">
-				<input class="btnlite" type="submit" accesskey="p" tabindex="6" name="preview" value="{L_PREVIEW}" />
-				<input class="btnmain" type="submit" accesskey="s" tabindex="7" name="post" value="{L_SUBMIT}" />&nbsp;
+				<input class="btnlite" type="submit" accesskey="p" tabindex="6" name="preview" value="{L_PREVIEW}" />&nbsp;
+				<input class="btnmain" type="submit" accesskey="s" tabindex="7" name="post" value="{L_SUBMIT}" />
 
 				{S_FORM_TOKEN}
 				{QR_HIDDEN_FIELDS}
