--- a/phpBB/styles/prosilver/template/quickreply_editor.html
+++ b/phpBB/styles/prosilver/template/quickreply_editor.html
@@ -37,7 +37,7 @@
 					<fieldset class="submit-buttons">
 						{S_FORM_TOKEN}
 						{QR_HIDDEN_FIELDS}
-						<input type="submit" accesskey="p" tabindex="6" name="preview" value="{L_PREVIEW}" class="button2" />&nbsp;
+						<input type="submit" accesskey="f" tabindex="6" name="preview" value="{L_FULL_EDITOR}" class="button2" />&nbsp;
 						<input type="submit" accesskey="s" tabindex="7" name="post" value="{L_SUBMIT}" class="button1" />&nbsp;
 					</fieldset>
 			<span class="corners-bottom"><span></span></span></div>
@@ -60,7 +60,7 @@
 				<fieldset class="submit-buttons">
 					{S_FORM_TOKEN}
 					{QR_HIDDEN_FIELDS}
-					<input type="submit" accesskey="p" tabindex="6" name="preview" value="{L_PREVIEW}" class="button2" onclick="document.getElementById('postform').action += '#preview';" />&nbsp;
+					<input type="submit" accesskey="f" tabindex="6" name="preview" value="{L_FULL_EDITOR}" class="button2" onclick="document.getElementById('postform').action += '#preview';" />&nbsp;
 					<input type="submit" accesskey="s" tabindex="7" name="post" value="{L_SUBMIT}" class="button1" />&nbsp;
 				</fieldset>
 				<a href="" class="right-box up" onclick="hide_qr(false); return false;" title="{L_COLLAPSE_QR}">{L_COLLAPSE_QR}</a>
