[feature/qrpreview] Change conflicting form ID and use proper HTML code for &
PHPBB3-10726

--- a/phpBB/styles/prosilver/template/quickreply_editor.html
+++ b/phpBB/styles/prosilver/template/quickreply_editor.html
@@ -44,7 +44,7 @@
 		</div>
 	</form>
 </noscript>
-<form method="post" action="{U_QR_ACTION}" id="postform">
+<form method="post" action="{U_QR_ACTION}" id="qrpostform">
 	<div class="panel" style="display: none" id="qr_editor_div">
 		<div class="inner"><span class="corners-top"><span></span></span>
 				<h2>{L_QUICKREPLY}</h2>
