[feature/ajax] Remove quick-reply AJAX handling until we have something good
The current implementation is not very user friendly, lots of things flashing
in the user's face. We can re-consider AJAX when we have a decent solution.

PHPBB3-10270

--- a/phpBB/styles/prosilver/template/quickreply_editor.html
+++ b/phpBB/styles/prosilver/template/quickreply_editor.html
@@ -1,4 +1,4 @@
-<form method="post" action="{U_QR_ACTION}" data-ajax="qr-submit" data-refresh="true">
+<form method="post" action="{U_QR_ACTION}">
 	<div class="panel">
 		<div class="inner"><span class="corners-top"><span></span></span>
 				<h2>{L_QUICKREPLY}</h2>
