[ticket/10734] Fixed template files
Removed unnecessary span from overall_header, overall_footer,
forumlist_body, viewforum_body.

PHPBB3-10734

--- a/phpBB/styles/prosilver/template/overall_footer.html
+++ b/phpBB/styles/prosilver/template/overall_footer.html
@@ -3,8 +3,8 @@
 <div id="page-footer">
 
 	<div class="navbar">
-		<div class="inner"><span class="corners-top"><span></span></span>
-
+		<div class="inner">
+		
 		<ul class="linklist">
 			<li class="icon-home"><a href="{U_INDEX}" accesskey="h">{L_INDEX}</a></li>
 				<!-- IF not S_IS_BOT -->
@@ -16,7 +16,7 @@
 			<li class="rightside"><!-- IF U_TEAM --><a href="{U_TEAM}">{L_THE_TEAM}</a> &bull; <!-- ENDIF --><!-- IF not S_IS_BOT --><a href="{U_DELETE_COOKIES}" data-ajax="true" data-refresh="true">{L_DELETE_COOKIES}</a> &bull; <!-- ENDIF -->{S_TIMEZONE}</li>
 		</ul>
 
-		<span class="corners-bottom"><span></span></span></div>
+		<span class="clear"></span></div>
 	</div>
 
 	<div class="copyright">Powered by <a href="http://www.phpbb.com/">phpBB</a>&reg; Forum Software &copy; phpBB Group
