--- a/phpBB/styles/prosilver/template/overall_header.html
+++ b/phpBB/styles/prosilver/template/overall_header.html
@@ -96,7 +96,7 @@
 	<a id="top" accesskey="t"></a>
 	<div id="page-header">
 		<div class="headerbar">
-			<div class="inner"><span class="corners-top"><span></span></span>
+			<div class="inner">
 
 			<div id="site-description">
 				<a href="{U_INDEX}" title="{L_INDEX}" id="logo">{SITE_LOGO_IMG}</a>
@@ -117,11 +117,11 @@
 			</div>
 		<!-- ENDIF -->
 
-			<span class="corners-bottom"><span></span></span></div>
+			<span class="clear"></span></div>
 		</div>
 
 		<div class="navbar">
-			<div class="inner"><span class="corners-top"><span></span></span>
+			<div class="inner">
 
 			<ul class="linklist navlinks">
 				<li class="icon-home"><a href="{U_INDEX}" accesskey="h">{L_INDEX}</a> <!-- BEGIN navlinks --> <strong>&#8249;</strong> <a href="{navlinks.U_VIEW_FORUM}">{navlinks.FORUM_NAME}</a><!-- END navlinks --></li>
@@ -156,7 +156,7 @@
 				<!-- ENDIF -->
 			</ul>
 
-			<span class="corners-bottom"><span></span></span></div>
+			<span class="clear"></span></div>
 		</div>
 
 	</div>
@@ -167,6 +167,6 @@
 		<div id="information" class="rules">
 			<div class="inner"><span class="corners-top"><span></span></span>
 				<strong>{L_INFORMATION}:</strong> {L_BOARD_DISABLED}
-			<span class="corners-bottom"><span></span></span></div>
+			<span class="clear"></span></div>
 		</div>
 		<!-- ENDIF -->
