[ticket/10734] Fixed template files
Removed unnecessary span from several other template files

PHPBB3-10734

--- a/phpBB/styles/prosilver/template/faq_body.html
+++ b/phpBB/styles/prosilver/template/faq_body.html
@@ -4,7 +4,7 @@
 
 
 <div class="panel bg1" id="faqlinks">
-	<div class="inner"><span class="corners-top"><span></span></span>
+	<div class="inner">
 		<div class="column1">
 		<!-- BEGIN faq_block -->
 			<!-- IF faq_block.SWITCH_COLUMN or (SWITCH_COLUMN_MANUALLY and faq_block.S_ROW_COUNT == 4) -->
@@ -21,7 +21,7 @@
 			</dl>
 		<!-- END faq_block -->
 		</div>
-	<span class="corners-bottom"><span></span></span></div>
+	<span class="clear"></span></div>
 </div>
 
 
