--- a/phpBB/styles/prosilver/template/memberlist_view.html
+++ b/phpBB/styles/prosilver/template/memberlist_view.html
@@ -4,7 +4,7 @@
 
 <form method="post" action="{S_PROFILE_ACTION}" id="viewprofile">
 <div class="panel bg1<!-- IF S_ONLINE --> online<!-- ENDIF -->">
-	<div class="inner"><span class="corners-top"><span></span></span>
+	<div class="inner">
 
 	<!-- IF AVATAR_IMG -->
 		<dl class="left-box">
@@ -49,11 +49,11 @@
 		<!-- ENDIF -->
 	</dl>
 
-	<span class="corners-bottom"><span></span></span></div>
+	<span class="clear"></span></div>
 </div>
 
 <div class="panel bg2">
-	<div class="inner"><span class="corners-top"><span></span></span>
+	<div class="inner">
 	<div class="column1">
 
 		<h3>{L_CONTACT_USER} {USERNAME}</h3>
@@ -94,18 +94,18 @@
 			<!-- ENDIF -->
 		</dl>
 	</div>
-	<span class="corners-bottom"><span></span></span></div>
+	<span class="clear"></span></div>
 </div>
 
 <!-- IF SIGNATURE -->
 <div class="panel bg1">
-	<div class="inner"><span class="corners-top"><span></span></span>
+	<div class="inner">
 
 		<h3>{L_SIGNATURE}</h3>
 
 		<div class="postbody"><div class="signature" style="border-top:none; margin-top: 0;">{SIGNATURE}</div></div>
 
-	<span class="corners-bottom"><span></span></span></div>
+	<span class="clear"></span></div>
 </div>
 <!-- ENDIF -->
 
