--- a/phpBB/styles/prosilver/theme/common.css
+++ b/phpBB/styles/prosilver/theme/common.css
@@ -594,9 +594,10 @@ li.pagination {
 	border: 1px solid transparent;
 	position: fixed;
 	display: none;
-	top: 100px;
-	left: 35%;
+	top: 40%;
+	left: 50%;
 	width: 30%;
+	margin-left: -15%;
 	z-index: 50;
 	padding: 25px;
 	padding: 0 25px 20px 25px;
